[gd_scene load_steps=17 format=3 uid="uid://dcwwcthdweq8w"]

[ext_resource type="Script" uid="uid://bbsqheiexmu0d" path="res://scripts/menu/main_menu.gd" id="1_1yx65"]
[ext_resource type="Texture2D" uid="uid://7vbjvh67kyte" path="res://assets/menu/Background.png" id="1_abljk"]
[ext_resource type="Texture2D" uid="uid://ddgmu6sk7ekn0" path="res://assets/menu/New game/menu1.png" id="2_8w1fh"]
[ext_resource type="Texture2D" uid="uid://4lb3c5ge7me1" path="res://assets/menu/New game/menu2.png" id="3_fvfg1"]
[ext_resource type="Texture2D" uid="uid://iipr5k5ldlyv" path="res://assets/menu/New game/menu.png" id="4_fvfg1"]
[ext_resource type="Texture2D" uid="uid://d14pdhcv715yd" path="res://assets/menu/Load/load1.png" id="5_s2qla"]
[ext_resource type="Texture2D" uid="uid://bygcqst48qwdt" path="res://assets/menu/Load/load2.png" id="6_ovy64"]
[ext_resource type="Texture2D" uid="uid://duu33lgssu3fd" path="res://assets/menu/Load/load.png" id="7_1m3sb"]
[ext_resource type="Texture2D" uid="uid://idd3pg84d1a8" path="res://assets/menu/Settings/settings1.png" id="8_mg4ns"]
[ext_resource type="Texture2D" uid="uid://bgbo8fartfgoa" path="res://assets/menu/Settings/settings2.png" id="9_6k2fh"]
[ext_resource type="Texture2D" uid="uid://by3hb54vihhnt" path="res://assets/menu/Settings/settings.png" id="10_5n5qq"]
[ext_resource type="Texture2D" uid="uid://gg7yomx7oyly" path="res://assets/menu/Exit/exit1.png" id="11_tq1cm"]
[ext_resource type="Texture2D" uid="uid://beccb84736uj3" path="res://assets/menu/Exit/exit2.png" id="12_ll4xq"]
[ext_resource type="Texture2D" uid="uid://bk17s2k1cmrd4" path="res://assets/menu/Exit/exit.png" id="13_1yx65"]
[ext_resource type="FontFile" uid="uid://dkctivjq28eq8" path="res://assets/fonts/Jersey10-Regular.ttf" id="14_ll4xq"]
[ext_resource type="AudioStream" uid="uid://dhbo2bbe7qlvb" path="res://assets/audio/effects/ui/ui-click-43196.mp3" id="17_gaoh0"]

[node name="MainMenu" type="Control" groups=["main_menu", "music_settings"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1yx65")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_abljk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -110.0
offset_right = 115.0
offset_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2

[node name="New Game" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_8w1fh")
texture_pressed = ExtResource("3_fvfg1")
texture_hover = ExtResource("4_fvfg1")

[node name="Load" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_s2qla")
texture_pressed = ExtResource("6_ovy64")
texture_hover = ExtResource("7_1m3sb")

[node name="Settings" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_mg4ns")
texture_pressed = ExtResource("9_6k2fh")
texture_hover = ExtResource("10_5n5qq")

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("11_tq1cm")
texture_pressed = ExtResource("12_ll4xq")
texture_hover = ExtResource("13_1yx65")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -231.0
offset_right = 205.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("14_ll4xq")
theme_override_font_sizes/font_size = 90
text = "Test of Might"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfxHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_gaoh0")
bus = &"SFX"

[connection signal="mouse_entered" from="VBoxContainer/New Game" to="." method="_play_Sound"]
[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Load" to="." method="_play_Sound"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Settings" to="." method="_play_Sound"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="." method="_play_Sound"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
